# bookstore

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: factory.py  urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewset/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
