[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Luiz Francisco <luizfk.marinho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
django = ">=5.1.5,<6.0.0"
djangorestframework = ">=3.15.2,<4.0.0"
"django-rest-framework" = ">=0.1.0,<0.2.0"
factory-boy = ">=3.3.1,<4.0.0"
faker = ">=35.2.0,<36.0.0"
"django-extensions" = ">=3.2.3,<4.0.0"
"django-debug-toolbar" = ">=5.0.1,<6.0.0"
psycopg2-binary = "^2.9.10"
flake8 = "^7.1.1"
gitpython = "^3.1.44"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
factory-boy = "^3.3.1"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
